--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -118,7 +118,7 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes.VS.UHF"
+      "template_folder": "_themes.VS.Modern"
     }
   ],
   "notification_subscribers": [
@@ -169,12 +169,6 @@
         "technet_release_e2e": "release",
         "technet_hotfix_e2e": "hotfix"
       }
-    },
-    {
-      "path_to_root": "_themes.VS.UHF",
-      "url": "https://github.com/Microsoft/templates.vs.com.vscomuhf",
-      "branch": "master",
-      "branch_mapping": {}
     },
     {
       "path_to_root": "_themes.VS.Modern",
