--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -184,7 +184,8 @@
         "master": "develop",
         "vscom_develop_e2e": "develop",
         "vscom_release_e2e": "release",
-        "vscom_hotfix_e2e": "hotfix"
+        "vscom_hotfix_e2e": "hotfix",
+        "jinhwa_test_can_delete": "develop"
       }
     },
     {
