--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,10 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
+  "enable_push_aggregation": true,
+  "enable_pull_request_aggregation": true,
+  "need_preview_pull_request": true,
+  "enable_incremental_build": true,
   "docsets_to_publish": [
     {
       "docset_name": "openpublishing-test-docs",
