--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,10 +1,6 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
-  "enable_push_aggregation": true,
-  "enable_pull_request_aggregation": true,
-  "need_preview_pull_request": true,
-  "enable_incremental_build": true,
   "docsets_to_publish": [
     {
       "docset_name": "openpublishing-test-docs",
@@ -130,6 +126,10 @@
   ],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
+  "need_preview_pull_request": true,
+  "enable_incremental_build": true,
+  "enable_push_aggregation": true,
+  "enable_pull_request_aggregation": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -185,5 +185,6 @@
         "vscom_hotfix_e2e": "hotfix"
       }
     }
-  ]
+  ],
+  "need_generate_pdf_url_template": false
 }
