--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -104,6 +104,7 @@
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
+  "enable_full_build": true,
   "enable_push_aggregation": true,
   "enable_pull_request_aggregation": true,
   "dependent_repositories": [
