--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -103,6 +103,9 @@
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
+  "enable_incremental_build": true,		
+  "enable_push_aggregation": true,		
+  "enable_pull_request_aggregation": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
