--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -106,7 +106,7 @@
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft",
+      "url": "https://github.com/Microsoft/templates.docs.msft.de-de",
       "branch": "master",
       "branch_mapping": {
         "develop_e2e": "develop",
