--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -6,7 +6,7 @@
       "docset_name": "openpublishing-test-docs",
       "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test-docs",
-      "locale": "de-de",
+      "locale": "en-us",
       "version": 0,
       "open_to_public_contributors": true,
       "type_mapping": {
@@ -106,7 +106,7 @@
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft.de-de",
+      "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
       "branch_mapping": {
         "develop_e2e": "develop",
