update the config

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -112,12 +112,12 @@
       "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
       "branch_mapping": {
-        // "develop_e2e": "develop",
-        // "release_e2e": "release",
-        // "hotfix_e2e": "hotfix",
-        // "docs_develop_e2e": "ops_develop",
-        // "docs_release_e2e": "ops_release",
-        // "docs_hotfix_e2e": "ops_hotfix"
+        "develop_e2e": "develop",
+        "release_e2e": "release",
+        "hotfix_e2e": "hotfix",
+        "docs_develop_e2e": "ops_develop",
+        "docs_release_e2e": "ops_release",
+        "docs_hotfix_e2e": "ops_hotfix"
       }
     },
     {
