--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -15,7 +15,8 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes"
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-op",
@@ -29,7 +30,23 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op"
+      "build_entry_point": "op",
+      "is_dynamic_rendering": false
+    },
+    {
+      "docset_name": "openpublishing-test-op-technet",
+      "build_source_folder": "openpublishing/test",
+      "build_output_subfolder": "openpublishing/test",
+      "locale": "en-us",
+      "version": 0,
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "op",
+      "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-reference",
@@ -45,6 +62,7 @@
       },
       "build_entry_point": "op",
       "template_folder": "_themes.OPS",
+      "is_dynamic_rendering": false,
       "customized_tasks": {
         "docset_prebuild": [
           "scripts/generateYamlFromSourceCode.ps1"
@@ -65,7 +83,8 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes.OPS"
+      "template_folder": "_themes.OPS",
+      "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-static-vscom",
@@ -80,12 +99,13 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes.VS.Modern"
+      "template_folder": "_themes.VS.Modern",
+      "is_dynamic_rendering": false
     },
     {
-      "docset_name": "openpublishing-test-op-technet",
-      "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test",
+      "docset_name": "openpublishing-test-azure",
+      "build_source_folder": "openpublishing/azure-docs-pr",
+      "build_output_subfolder": "openpublishing/test/azure",
       "locale": "en-us",
       "version": 0,
       "open_to_public_contributors": false,
@@ -94,7 +114,9 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op"
+      "build_entry_point": "docs",
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
     }
   ],
   "notification_subscribers": [
@@ -103,9 +125,6 @@
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
-  "enable_incremental_build": false,		
-  "enable_push_aggregation": true,		
-  "enable_pull_request_aggregation": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
