--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,11 +1,19 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
+      "Publish"
+      "Publish"
+    ],
+    "test-pdf": [
+      "Publish",
+      "Pdf"
+    ]
+  },
   "docsets_to_publish": [
     {
       "docset_name": "openpublishing-test-azure",
       "build_source_folder": "openpublishing/azure-docs-pr",
-      "build_output_subfolder": "openpublishing/test-docs/azure",
+      "build_output_subfolder": "openpublishing/test-azure",
       "locale": "en-us",
       "version": 0,
       "open_to_public_contributors": false,
