--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,7 +1,6 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
-  "need_generate_pdf_url_template": true,
   "branch_target_mapping": {
     "live": [
       "Publish"
@@ -196,5 +195,5 @@
       "branch_mapping": {}
     }
   ],
-  "need_generate_pdf_url_template": false
+  "need_generate_pdf_url_template": true
 }
