--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,7 +1,7 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
-  "need_generate_pdf_url_template": true,
+  "need_generate_pdf_url_template": false,
   "branch_target_mapping": {
     "live": [
       "Publish"
