--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,19 +1,7 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
-  "need_generate_pdf_url_template": true,
-  "branch_target_mapping": {
-    "live": [
-      "Publish"
-    ],
-    "master": [
-      "Publish"
-    ],
-    "MergeAzureContent": [
-      "Publish",
-      "Pdf"
-    ]
-  },
+  "need_generate_pdf_url_template": false,
   "Targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
