--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -9,7 +9,7 @@
     "master": [
       "Publish"
     ],
-    "MergeAzureContent": [
+    "MergeAzureContent1": [
       "Publish",
       "Pdf"
     ]
