--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -57,7 +57,7 @@
       "build_output_subfolder": "openpublishing/test-docs",
       "locale": "en-us",
       "version": 0,
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
