set report_unchanged_files_with_more_warnings to false

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -2,6 +2,7 @@
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
   "need_generate_pdf_url_template": true,
+  "report_unchanged_files_with_more_warnings": false,
   "branch_target_mapping": {
     "live": [
       "Publish"
