--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,10 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
+  "branch_target_mapping": {
+    "live": ["Publish", "Pdf", "Intellisense"],
+    "master": ["Publish", "Pdf", "Intellisense"]
+  },
   "docsets_to_publish": [
     {
       "docset_name": "openpublishing-test-azure",
