--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -15,7 +15,7 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op",
+      "build_entry_point": "docs",
       "version": 0
     },
     {
@@ -30,7 +30,7 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op",
+      "build_entry_point": "docs",
       "version": 0
     },
     {
@@ -96,7 +96,7 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op",
+      "build_entry_point": "docs",
       "version": 0
     },
     {
@@ -111,7 +111,7 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op",
+      "build_entry_point": "docs",
       "version": 0
     },
     {
