--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -33,6 +33,7 @@
       },
       "build_entry_point": "docs",
       "version": 0,
+      "template_folder": "_themes"
     },
     {
       "docset_name": "openpublishing-test-op",
