--- a/openpublishing/test/reference/toc.yml
+++ b/openpublishing/test/reference/toc.yml
@@ -19,3 +19,5 @@
     name: AuthenticationParameters
   - uid: Microsoft.IdentityModel.Clients.ActiveDirectory.AuthenticationStatus
     name: AuthenticationStatus
+  - uid: Microsoft.IdentityModel.Clients.ActiveDirectory-1
+    name: Microsoft.IdentityModel.Clients.ActiveDirectory-1
