--- a/openpublishing/test/reference/Microsoft.IdentityModel.Clients.ActiveDirectory.yml
+++ b/openpublishing/test/reference/Microsoft.IdentityModel.Clients.ActiveDirectory.yml
@@ -1,3 +1,4 @@
+### YamlMime:ManagedReference
 items:
 - uid: Microsoft.IdentityModel.Clients.ActiveDirectory
   id: Microsoft.IdentityModel.Clients.ActiveDirectory
