--- a/openpublishing/test/reference/Microsoft.IdentityModel.Clients.ActiveDirectory.AuthenticationStatus.yml
+++ b/openpublishing/test/reference/Microsoft.IdentityModel.Clients.ActiveDirectory.AuthenticationStatus.yml
@@ -1,3 +1,4 @@
+### YamlMime:ManagedReference
 items:
 - uid: Microsoft.IdentityModel.Clients.ActiveDirectory.AuthenticationStatus
   id: AuthenticationStatus
