Revert "fix overlapping output folders"
This reverts commit d1c72b378503df514e5a88c758899b12106abfb0.

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -53,7 +53,7 @@
     {
       "docset_name": "openpublishing-test-op-technet",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-op-technet",
+      "build_output_subfolder": "openpublishing/test",
       "locale": "en-us",
       "monikers": [],
       "open_to_public_contributors": true,
