--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,7 +1,5 @@
 {
   "build_entry_point": "op",
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
       "docset_name": "openpublishing-test-azure",
@@ -16,8 +14,7 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "version": 0,
-      "template_folder": "_themes"
+      "version": 0
     },
     {
       "docset_name": "openpublishing-test-docs",
@@ -32,8 +29,7 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "version": 0,
-      "template_folder": "_themes"
+      "version": 0
     },
     {
       "docset_name": "openpublishing-test-op",
@@ -53,7 +49,7 @@
     {
       "docset_name": "openpublishing-test-op-technet",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-op-technet",
+      "build_output_subfolder": "openpublishing/test",
       "locale": "en-us",
       "monikers": [],
       "open_to_public_contributors": true,
@@ -87,6 +83,20 @@
       "customized_template_paths": "RawModelContentTemplate"
     },
     {
+      "docset_name": "openpublishing-test-sql",
+      "build_source_folder": "openpublishing/sql",
+      "build_output_subfolder": "openpublishing-test-sql",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "openpublishing-test-starterkit",
       "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test-starterkit",
@@ -99,8 +109,7 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "version": 0,
-      "template_folder": "_themes.OPS"
+      "version": 0
     },
     {
       "docset_name": "openpublishing-test-static-vscom",
@@ -115,8 +124,7 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "version": 0,
-      "template_folder": "_themes.VS.Modern"
+      "version": 0
     },
     {
       "docset_name": "OPTest",
@@ -237,9 +245,11 @@
     ]
   },
   "need_generate_pdf_url_template": false,
-  "Targets": {
+  "targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
     }
-  }
+  },
+  "need_generate_pdf": false,
+  "need_generate_intellisense": false
 }
