--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,7 +1,5 @@
 {
   "build_entry_point": "op",
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
       "docset_name": "openpublishing-test-azure",
@@ -83,6 +81,20 @@
         ]
       },
       "customized_template_paths": "RawModelContentTemplate"
+    },
+    {
+      "docset_name": "openpublishing-test-sql",
+      "build_source_folder": "openpublishing/sql",
+      "build_output_subfolder": "openpublishing-test-sql",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     },
     {
       "docset_name": "openpublishing-test-starterkit",
@@ -233,9 +245,11 @@
     ]
   },
   "need_generate_pdf_url_template": false,
-  "Targets": {
+  "targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
     }
-  }
+  },
+  "need_generate_pdf": false,
+  "need_generate_intellisense": false
 }
